--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node index.js",
     "serve": "nodemon app.js"
-
   },
   "keywords": [],
   "author": "vitalyvitmens",
@@ -14,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
