--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
 	"name": "frontend",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "http://localhost:3001",
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.0",
 		"@testing-library/jest-dom": "^5.16.5",
